- Refactor the icons - Add key handler for keyboard navigation across sections - Fix the jumping bug when navigating with the primary navigation

--- a/app/styles/_modules.scss
+++ b/app/styles/_modules.scss
@@ -75,6 +75,7 @@
 
 .musicplayer {
 	width: 642px;
+    max-height: 460px;
     background: #E5E5E5;
 
 	iframe {
